# Probability-Calculator

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  index.html  mkdocs.yml  probability_calculator.py  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml  lint.yml  tests.yml
api/: index.html
cli/: index.html
docs/: api.md  cli.md  examples.md  index.md  usage.md
examples/: index.html
probability_calculator/: __init__.py  cli.py  experiment.py  hat.py
search/: search_index.json
tests/: test_experiment.py  test_hat.py
usage/: index.html
